--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
-authors = ["Programatik <programatik29@gmail.com>"]
+authors = ["Programatik <programatik29@gmail.com>", "Megsdevs <megsdevs@outlook.com", "0xAlcibiades <alcibiades.eth@protonmail.com>"]
 categories = ["asynchronous", "network-programming", "web-programming"]
-description = "High level server designed to be used with axum framework."
-edition = "2018"
-homepage = "https://github.com/programatik29/axum-server"
+description = "High level server for hyper and tower."
+edition = "2021"
+homepage = "https://github.com/valorem-labs-inc/hyper-server"
 keywords = ["http", "https", "web", "server"]
 license = "MIT"
-name = "axum-server"
+name = "hyper-server"
 readme = "README.md"
-repository = "https://github.com/programatik29/axum-server"
+repository = "https://github.com/valorem-labs-inc/hyper-server"
 version = "0.5.1"
 
 [features]
@@ -42,7 +42,7 @@ axum = "0.6"
 hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
-tower-http = { version = "0.3", features = ["add-extension"] }
+tower-http = { version = "0.4.4", features = ["add-extension"] }
 
 [package.metadata.docs.rs]
 all-features = true
