--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ categories = ["asynchronous", "network-programming", "web-programming"]
 description = "High level server for hyper and tower."
 edition = "2021"
 homepage = "https://github.com/valorem-labs-inc/hyper-server"
-keywords = ["http", "https", "web", "server"]
+keywords = ["axum", "tonic", "hyper", "tower", "server"]
 license = "MIT"
 name = "hyper-server"
 readme = "README.md"
