chore: New crate and CI (#1)

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 /target
+.idea
+.env
+.vscode
+
+broadcast/
+cache/
+out/
+
+# Local settings file - if stored under the repository
+settings.yaml
+
+# Scripts lockfile
+.lock
+
+# lcov
+lcov.info
+
+# Ignore cargo lock for library
 Cargo.lock
