--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
-authors = ["Programatik <programatik29@gmail.com>"]
+authors = ["Programatik <programatik29@gmail.com>", "Megsdevs <megsdevs@outlook.com", "0xAlcibiades <alcibiades.eth@protonmail.com>"]
 categories = ["asynchronous", "network-programming", "web-programming"]
-description = "High level server designed to be used with axum framework."
-edition = "2018"
-homepage = "https://github.com/programatik29/axum-server"
-keywords = ["http", "https", "web", "server"]
+description = "High level server for hyper and tower."
+edition = "2021"
+homepage = "https://github.com/valorem-labs-inc/hyper-server"
+keywords = ["axum", "tonic", "hyper", "tower", "server"]
 license = "MIT"
-name = "axum-server"
+name = "hyper-server"
 readme = "README.md"
-repository = "https://github.com/programatik29/axum-server"
-version = "0.5.1"
+repository = "https://github.com/valorem-labs-inc/hyper-server"
+version = "0.5.2"
 
 [features]
 default = []
@@ -21,7 +21,7 @@ bytes = "1"
 futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
 http = "0.2"
 http-body = "0.4"
-hyper = { version = "0.14.26", features = ["http1", "http2", "server", "runtime"] }
+hyper = { version = "0.14.27", features = ["http1", "http2", "server", "runtime"] }
 tokio = { version = "1", features = ["macros", "net", "sync"] }
 tower-service = "0.3"
 
@@ -42,7 +42,7 @@ axum = "0.6"
 hyper = { version = "0.14", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
-tower-http = { version = "0.3", features = ["add-extension"] }
+tower-http = { version = "0.4.4", features = ["add-extension"] }
 
 [package.metadata.docs.rs]
 all-features = true
