--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -35,7 +35,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           cache-on-failure: true
-      # Only run tests on latest stable and above
+      # Only run tests on the latest stable and above
       - name: check
         if: ${{ matrix.rust == '1.65' }} # MSRV
         run: cargo check --workspace ${{ matrix.flags }}
