--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,19 +21,20 @@ proxy-protocol = ["ppp", "pin-project-lite"]
 
 # optional dependencies
 ## rustls
-arc-swap = { version = "1", optional = true }
-bytes = "1"
+arc-swap = { version = "1.7", optional = true }
+bytes = "1.7"
 futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
 http = "0.2"
 http-body = "0.4"
-hyper = { version = "0.14.27", features = ["http1", "http2", "server", "runtime"] }
+hyper = { version = "1.4.1", features = ["http1", "http2", "server"] }
+hyper-util = { version = "0.1.7" }
 
 ## openssl
 openssl = { version = "0.10", optional = true }
 pin-project-lite = { version = "0.2", optional = true }
-rustls = { version = "0.21", features = ["dangerous_configuration"], optional = true }
-rustls-pemfile = { version = "1", optional = true }
-tokio = { version = "1", features = ["macros", "net", "sync"] }
+rustls = { version = "0.23", optional = true }
+rustls-pemfile = { version = "2.1.3", optional = true }
+tokio = { version = "1.40.0", features = ["macros", "net", "sync"] }
 tokio-openssl = { version = "0.6", optional = true }
 tokio-rustls = { version = "0.24", optional = true }
 tower-service = "0.3"
@@ -42,9 +43,9 @@ tower-service = "0.3"
 ppp = { version = "2.2.0", optional = true }
 
 [dev-dependencies]
-axum = "0.6"
-hyper = { version = "0.14", features = ["full"] }
-tokio = { version = "1", features = ["full"] }
+axum = "0.7"
+hyper = { version = "1.4.1", features = ["full"] }
+tokio = { version = "1.40", features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
 tower-http = { version = "0.4.4", features = ["add-extension"] }
 
