--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,10 @@ arc-swap = { version = "1.7", optional = true }
 bytes = "1.7"
 futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
 http = "0.2"
-http-body = "0.4"
+http-body = "1.0"
+http-body-util = "0.1"
 hyper = { version = "1.4.1", features = ["http1", "http2", "server"] }
-hyper-util = { version = "0.1.7" }
+hyper-util = { version = "0.1.7", features=["http1", "http2", "client-legacy", "server"] }
 
 ## openssl
 openssl = { version = "0.10", optional = true }
@@ -44,6 +45,7 @@ ppp = { version = "2.2.0", optional = true }
 
 [dev-dependencies]
 axum = "0.7"
+hyper-util = { version = "0.1.7", features=["http1", "http2", "client-legacy", "server"] }
 hyper = { version = "1.4.1", features = ["full"] }
 tokio = { version = "1.40", features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
