--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ version = "0.5.3"
 
 [features]
 default = []
-tls-rustls = ["arc-swap", "pin-project-lite", "rustls", "rustls-pemfile", "tokio/fs", "tokio/time", "tokio-rustls"]
-tls-openssl = ["openssl", "tokio-openssl", "pin-project-lite"]
-proxy-protocol = ["ppp", "pin-project-lite"]
+tls-rustls = ["arc-swap", "rustls", "rustls-pemfile", "tokio/fs", "tokio/time", "tokio-rustls"]
+tls-openssl = ["openssl", "tokio-openssl"]
+proxy-protocol = ["ppp"]
 
 [dependencies]
 
@@ -27,10 +27,10 @@ futures-util = { version = "0.3", default-features = false, features = ["alloc"]
 http = "0.2"
 http-body = "0.4"
 hyper = { version = "0.14.27", features = ["http1", "http2", "server", "runtime"] }
+pin-project-lite = { version = "0.2" }
 
 ## openssl
 openssl = { version = "0.10", optional = true }
-pin-project-lite = { version = "0.2", optional = true }
 rustls = { version = "0.21", features = ["dangerous_configuration"], optional = true }
 rustls-pemfile = { version = "1", optional = true }
 tokio = { version = "1", features = ["macros", "net", "sync"] }
@@ -40,6 +40,8 @@ tower-service = "0.3"
 
 ## proxy-protocol
 ppp = { version = "2.2.0", optional = true }
+socket2 = "0.5.7"
+log = "0.4.22"
 
 [dev-dependencies]
 axum = "0.6"
