fix: graceful shutdown lints

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,14 +15,12 @@ version = "1.0.0"
 http-body-util = "0.1.2"
 hyper = { version = "1.4.1", features = ["server"] }
 hyper-util = { version = "0.1.7", features = ["service", "tokio", "http1", "server", "client", "client-legacy", "server-graceful"] }
-tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
+tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros", "signal"] }
 tower = { version = "0.5.0", features = ["util"] }
 tracing = "0.1.40"
 bytes = "1.7.1"
-nix = "0.29.0"
+nix = { version = "0.29.0", features = ["signal"] }
 
 [dev-dependencies]
-ctrlc = "3.4.5"
 hyper = { version = "1.4.1", features = ["client"] }
-tokio = { version = "1.39.3", features = ["io-util", "signal"] }
-tokio-stream = "0.1.15"
+tokio = { version = "1.39.3", features = ["io-util"] }
