--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-authors = ["Programatik <programatik29@gmail.com>", "Megsdevs <megsdevs@outlook.com", "0xAlcibiades <alcibiades.eth@protonmail.com>"]
+authors = ["jonathan@warlock.xyz", "0xAlcibiades <alcibiades.eth@protonmail.com>"]
 categories = ["asynchronous", "network-programming", "web-programming"]
 description = "High level server for hyper and tower."
 edition = "2021"
@@ -8,72 +8,44 @@ keywords = ["axum", "tonic", "hyper", "tower", "server"]
 license = "MIT"
 name = "hyper-server"
 readme = "README.md"
-repository = "https://github.com/valorem-labs-inc/hyper-server"
-version = "0.5.3"
+repository = "https://github.com/warlock/hyper-server"
+version = "1.0.0"
 
-[features]
-default = []
-tls-rustls = ["arc-swap", "pin-project-lite", "rustls", "rustls-pemfile", "tokio/fs", "tokio/time", "tokio-rustls"]
-tls-openssl = ["openssl", "tokio-openssl", "pin-project-lite"]
-proxy-protocol = ["ppp", "pin-project-lite"]
 
 [dependencies]
-
-# optional dependencies
 ## rustls
 arc-swap = { version = "1", optional = true }
 bytes = "1"
 futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
-http = "0.2"
-http-body = "0.4"
-hyper = { version = "0.14.27", features = ["http1", "http2", "server", "runtime"] }
+http = "1.1"
+http-body = "1.0.1"
+http-body-util = { version = "0.1" }
+hyper = { version = "1.4", features = ["http1", "http2", "server"] }
+hyper-util = { version = "0.1", features = ["full"]}
 
 ## openssl
-openssl = { version = "0.10", optional = true }
-pin-project-lite = { version = "0.2", optional = true }
-rustls = { version = "0.21", features = ["dangerous_configuration"], optional = true }
-rustls-pemfile = { version = "1", optional = true }
-tokio = { version = "1", features = ["macros", "net", "sync"] }
+openssl = { version = "0.10" }
+pin-project-lite = { version = "0.2" }
+rustls = { version = "0.23" }
+rustls-pemfile = { version = "2.1" }
+tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "signal"] }
 tokio-openssl = { version = "0.6", optional = true }
-tokio-rustls = { version = "0.24", optional = true }
+tokio-rustls = { version = "0.26", optional = true }
 tower-service = "0.3"
 
 ## proxy-protocol
 ppp = { version = "2.2.0", optional = true }
-
-[dev-dependencies]
-axum = "0.6"
-hyper = { version = "0.14", features = ["full"] }
-tokio = { version = "1", features = ["full"] }
-tower = { version = "0.4", features = ["util"] }
-tower-http = { version = "0.4.4", features = ["add-extension"] }
-
-[package.metadata.docs.rs]
-all-features = true
-cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
-rustdoc-args = ["--cfg", "docsrs"]
+tower = "0.4.13"
+nix = { version = "0.29.0", features = ["signal"] }
 
 [[example]]
-name = "from_std_listener_rustls"
-required-features = ["tls-rustls"]
-doc-scrape-examples = true
+name = "tower-server1"
+path = "examples/tower-server1.rs"
 
 [[example]]
-name = "http_and_https"
-required-features = ["tls-rustls"]
-doc-scrape-examples = true
+name = "tower-server2"
+path = "examples/tower-server2.rs"
 
 [[example]]
-name = "rustls_reload"
-required-features = ["tls-rustls"]
-doc-scrape-examples = true
-
-[[example]]
-name = "rustls_server"
-required-features = ["tls-rustls"]
-doc-scrape-examples = true
-
-[[example]]
-name = "rustls_session"
-required-features = ["tls-rustls"]
-doc-scrape-examples = true
+name = "tower-client"
+path = "examples/tower-client.rs"
