--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ tower-service = "0.3"
 
 ## proxy-protocol
 ppp = { version = "2.2.0", optional = true }
-tower = "0.4.13"
+tower = { version = "0.4.13", features = ["limit"] }
 nix = { version = "0.29.0", features = ["signal"] }
 
 [[example]]
