--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,14 @@ repository = "https://github.com/valorem-labs-inc/hyper-server"
 version = "1.0.0"
 
 [dependencies]
+http = "1.1.0"
+http-body-util = "0.1.2"
+hyper = "1.4.1"
+hyper-util = { version = "0.1.8", features = ["server", "tokio", "server-auto", "server-graceful"] }
+rustls = "0.23.13"
+tokio = { version = "1.40.0", features = ["net"] }
+tokio-rustls = "0.26.0"
+tower = "0.5.1"
+
+[dev-dependencies]
+tokio = { version = "1.40.0", features = ["macros"] }
