--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,13 @@ version = "1.0.0"
 http = "1.1.0"
 http-body-util = "0.1.2"
 hyper = "1.4.1"
-hyper-util = { version = "0.1.8", features = ["server", "tokio", "server-auto", "server-graceful"] }
+hyper-util = { version = "0.1.8", features = ["server", "tokio", "server-auto", "server-graceful", "service"] }
 rustls = "0.23.13"
+rustls-pemfile = "2.1.3"
 tokio = { version = "1.40.0", features = ["net"] }
 tokio-rustls = "0.26.0"
-tower = "0.5.1"
+tower = { version = "0.5.1", features = ["util"] }
+tracing = "0.1.40"
 
 [dev-dependencies]
 tokio = { version = "1.40.0", features = ["macros"] }
