--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ tokio = { version = "1.40.0", features = ["net"] }
 tokio-rustls = "0.26.0"
 tower = { version = "0.5.1", features = ["util"] }
 tracing = "0.1.40"
+http-body = "1.0.1"
+tokio-stream = "0.1.16"
+bytes = "1.7.1"
+pin-project = "1.1.5"
 
 [dev-dependencies]
 tokio = { version = "1.40.0", features = ["macros"] }
