--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ hyper = "1.4.1"
 hyper-util = { version = "0.1.8", features = ["server", "tokio", "server-auto", "server-graceful", "service"] }
 rustls = "0.23.13"
 rustls-pemfile = "2.1.3"
-tokio = { version = "1.40.0", features = ["net"] }
+tokio = { version = "1.40.0", features = ["net", "macros"] }
 tokio-rustls = "0.26.0"
 tower = { version = "0.5.1", features = ["util"] }
 tracing = "0.1.40"
@@ -30,5 +30,6 @@ async-stream = "0.3.5"
 futures = "0.3.30"
 
 [dev-dependencies]
-tokio = { version = "1.0", features = ["rt", "net", "test-util", "macros"] }
+tokio = { version = "1.0", features = ["rt", "net", "test-util"] }
 tokio-test = "0.4.4"
+hyper = {version = "1.4.1", features = ["client"] }
