--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,10 @@ http-body-util = "0.1.2"
 hyper = "1.4.1"
 hyper-util = { version = "0.1.8", features = ["server", "tokio", "server-auto", "server-graceful", "service"] }
 pin-project = "1.1.5"
+rustls = "0.23.13"
+rustls-pemfile = "2.1.3"
 tokio = { version = "1.40.0", features = ["net", "macros"] }
+tokio-rustls = "0.26.0"
 tokio-stream = { version = "0.1.16", features = ["net"] }
 tower = { version = "0.5.1", features = ["util"] }
 tracing = "0.1.40"
