feat: expose public functions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ categories = ["asynchronous", "network-programming", "web-programming"]
 description = "High level server for hyper and tower."
 edition = "2021"
 homepage = "https://github.com/warlock-labls/hyper-server"
-keywords = ["axum", "tonic", "hyper", "tower", "server"]
+keywords = ["tcp", "tls", "http", "hyper", "tokio"]
 license = "MIT"
 name = "hyper-server"
 readme = "README.md"
