--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ tower = { version = "0.5.1", features = ["util"] }
 tracing = "0.1.40"
 tokio-util = "0.7.12"
 hyper-rustls = "0.27.3"
+rand = "0.9.0-alpha.2"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
