--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ readme = "README.md"
 repository = "https://github.com/valorem-labs-inc/hyper-server"
 version = "0.7.0"
 
+[target.'cfg(not(target_env = "msvc"))'.dependencies]
+tikv-jemallocator = { version = "0.6", optional = true }
+
 [dependencies]
 async-stream = "0.3.5"
 bytes = "1.7.1"
@@ -31,18 +34,22 @@ tokio-stream = { version = "0.1.16", features = ["net"] }
 tokio-util = "0.7.12"
 tower = { version = "0.5.1", features = ["util"] }
 tracing = "0.1.40"
-jemallocator = { version = "0.5", optional = true }
+signature = "2.3.0-pre.4"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
 hyper = { version = "1.4.1", features = ["client"] }
 tokio = { version = "1.40", features = ["rt", "net", "test-util"] }
-tokio-util = { version = "0.7", features = ["compat"] }
+tokio-util = { version = "0.7.12", features = ["compat"] }
 tracing-subscriber = "0.3.18"
+num_cpus = "1.16.0"
+pprof = { version = "0.13.0", features = ["flamegraph"] }
+ring = "0.17.8"
+rcgen = "0.13.1"
 
 [[bench]]
 name = "hello_world_tower_hyper_tls_tcp"
 harness = false
 
 [features]
-jemalloc = ["jemallocator"]
+jemalloc = ["tikv-jemallocator"]
