feat: optimize server and document

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,6 @@ http = "1.1.0"
 http-body = "1.0.1"
 http-body-util = "0.1.2"
 hyper = "1.4.1"
-hyper-rustls = { version = "0.27.3", features = ["http2"] }
 hyper-util = { version = "0.1.8", features = ["server", "tokio", "server-auto", "server-graceful", "service"] }
 pin-project = "1.1.5"
 rand = "0.9.0-alpha.2"
@@ -40,13 +39,16 @@ pprof = { version = "0.13.0", features = ["flamegraph"], optional = true}
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
+hyper-rustls = { version = "0.27.3", features = ["http1", "http2"] }
+hyper-util = { version = "0.1.8", features = ["client", "client-legacy", "http2"] }
 hyper = { version = "1.4.1", features = ["client"] }
-tokio = { version = "1.40", features = ["rt", "net", "test-util"] }
+tokio = { version = "1.40", features = ["rt-multi-thread", "net", "test-util", "time"] }
 tokio-util = { version = "0.7.12", features = ["compat"] }
 tracing-subscriber = "0.3.18"
 num_cpus = "1.16.0"
 ring = "0.17.8"
 rcgen = "0.13.1"
+reqwest = { version = "0.12.7", features = ["rustls-tls", "http2"] }
 
 [[bench]]
 name = "hello_world_tower_hyper_tls_tcp"
