--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,31 +24,29 @@ http-body-util = "0.1.2"
 hyper = "1.4.1"
 hyper-util = { version = "0.1.8", features = ["server", "tokio", "server-auto", "server-graceful", "service"] }
 pin-project = "1.1.5"
-rand = "0.9.0-alpha.2"
+pprof = { version = "0.13.0", features = ["flamegraph"], optional = true }
+ring = "0.17.8"
 rustls = { version = "0.23.13", features = ["zlib"] }
 rustls-pemfile = "2.1.3"
-tokio = { version = "1.40.0", features = ["net", "macros", "rt-multi-thread"] }
+tokio = { version = "1.40.0", features = ["net", "macros", "rt-multi-thread", "time"] }
 tokio-rustls = "0.26.0"
 tokio-stream = { version = "0.1.16", features = ["net"] }
 tokio-util = "0.7.12"
 tower = { version = "0.5.1", features = ["util"] }
 tracing = "0.1.40"
-signature = "2.3.0-pre.4"
-ring = "0.17.8"
-pprof = { version = "0.13.0", features = ["flamegraph"], optional = true}
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }
+hyper = { version = "1.4.1", features = ["client"] }
 hyper-rustls = { version = "0.27.3", features = ["http1", "http2"] }
 hyper-util = { version = "0.1.8", features = ["client", "client-legacy", "http2"] }
-hyper = { version = "1.4.1", features = ["client"] }
+num_cpus = "1.16.0"
+rcgen = "0.13.1"
+reqwest = { version = "0.12.7", features = ["rustls-tls", "http2"] }
+ring = "0.17.8"
 tokio = { version = "1.40", features = ["rt-multi-thread", "net", "test-util", "time"] }
 tokio-util = { version = "0.7.12", features = ["compat"] }
 tracing-subscriber = "0.3.18"
-num_cpus = "1.16.0"
-ring = "0.17.8"
-rcgen = "0.13.1"
-reqwest = { version = "0.12.7", features = ["rustls-tls", "http2"] }
 
 [[bench]]
 name = "hello_world_tower_hyper_tls_tcp"
