--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,10 +26,10 @@ hyper-util = { version = "0.1.8", features = ["server", "tokio", "server-auto", 
 pin-project = "1.1.5"
 pprof = { version = "0.13.0", features = ["flamegraph"], optional = true }
 ring = "0.17.8"
-rustls = { version = "0.23.13", features = ["zlib"] }
+rustls = { version = "0.23.13", features = ["zlib", "aws_lc_rs"] }
 rustls-pemfile = "2.1.3"
 tokio = { version = "1.40.0", features = ["net", "macros", "rt-multi-thread", "time"] }
-tokio-rustls = "0.26.0"
+tokio-rustls = { version = "0.26.0", features = ["aws_lc_rs"] }
 tokio-stream = { version = "0.1.16", features = ["net"] }
 tokio-util = "0.7.12"
 tower = { version = "0.5.1", features = ["util"] }
